[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2024"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

[dependencies]
anyhow = "1.0.101"

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "day1"
path = "src/day1.rs"
